[package]
name = "tunein-rs"
description = "Tunein internet radio database API parser"
version = "0.1.0"
authors = ["Michał Małek <michalm@fastmail.fm>"]
license = "MIT"
repository = "https://github.com/mmalek/tunein-rs"
edition = "2018"

[lib]
name = "tunein"
path = "src/lib.rs"

[dependencies]
xml-rs = "~0.3"

[dev-dependencies]
hyper = "~0.13"
percent-encoding = "~2.1"
tokio = { version = "~0.2", features = ["macros", "rt-threaded", "stream"] }
